feat: 文件管理批量删除
